<resources>
    <string name="app_name">Graph Editor</string>
    <string name="create">Create</string>
    <string name="browse">Browse</string>
    <string name="menu_title">Graph Editor</string>
    <string name="clear">Clear</string>
    <string name="name">Name</string>
    <string name="graph">Graph</string>
    <string name="undirected_graph">Undirected Graph</string>
    <string name="directed_graph">Directed Graph</string>
    <string name="Vertex">Add\nvertex</string>
    <string name="Edge">Add\nedge</string>
    <string name="move_object">Move\nobject</string>
    <string name="move_canvas">move\ncanvas</string>
    <string name="save">Save</string>
    <string name="enter_graph_name">Enter graph\'s name</string>
    <string name="save_your_graph">Save your graph</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="clear_graph">Clear graph</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="normalize_graph">Normalize graph</string>
    <string name="save_as">Save as…</string>
    <string name="generate_graph">Generate graph</string>
    <string name="clique">Clique</string>
    <string name="bipartite_clique">Bipartite clique</string>
    <string name="enter_parameters">Enter parameters</string>
    <string name="confirm">Confirm</string>
    <string name="cycle">Cycle</string>
    <string name="full_binary_tree">Full binary tree</string>
    <string name="share_graph">Share graph</string>
    <string name="import_graph">Import graph</string>
    <string name="input_your_graph">Input your graph</string>
    <string name="shar">shar</string>
    <string name="settings">Settings</string>
    <string name="close">Close</string>
    <string name="settings_text_stylus">Stylus mode</string>
    <string name="settings_text_buttons">Buttons on top</string>
    <string name="are_you_sure_you_want_to_delete_this_graph">Delete this graph?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="recenter_graph">Recenter graph</string>
    <string name="fixed_edge_width">Fixed edge width</string>
    <string name="no_saved_graphs_yet">No graphs saved yet</string>
    <string name="are_you_sure_you_want_to_discard">Discard changes?</string>
    <string name="are_you_sure_you_want_to_exit">Do you want to save changes?</string>
    <string name="cancel">Cancel</string>
    <string name="export_graph">Export graph</string>
    <string name="creators">Creators</string>
    <string name="creators_content">Aleksander Katan - developer \nRoch Wójtowicz - developer \nBartołomiej Bosek - project patron \n</string>
    <string name="grid">Grid</string>
    <string name="king_grid">King grid</string>
    <string name="export_graph_as_file">Export graph as file</string>
    <string name="import_graph_as_file">Import graph as file</string>
    <string name="import_graph_from_text">Import graph from text</string>
    <string name="share_graph_as_text">Share graph as text</string>
    <string name="export_graph_as_text">Export graph as text</string>
    <string name="import_graph_from_file">Import graph from file</string>
    <string name="aleksander_katan_developer">Aleksander Katan - developer</string>
    <string name="roch_w_jtowicz_developer">Roch Wójtowicz - developer</string>
    <string name="bart_omiej_bosek_project_patron">Bartłomiej Bosek - Project Patron</string>
    <string name="directed">Directed</string>
    <string name="undirected">Undirected</string>
    <string name="choose_graph_type">Choose graph type</string>
    <string name="my_graphs">My graphs</string>
    <string name="new_graph">New graph</string>
    <string name="extensions">Extensions</string>
    <string name="available_extensions">Available Extensions</string>
    <string name="back">Back</string>
    <string name="saved_graphs">Saved graphs</string>
    <string name="dark_theme">Dark theme</string>
    <string name="read_graph_from_text">Read graph from text</string>
    <string name="installed">installed</string>
    <string name="installing">installing</string>
    <string name="install">install</string>
    <string name="deleted">deleted</string>
    <string name="defaultServerIp">192.168.43.113</string>
    <string name="change_server_ip">change server ip</string>
    <string name="server_address">SERVER ADDRESS</string>
    <string name="connect">connect</string>
    <string name="rotate_canvas">rotate canvas</string>
    <string name="zoom_canvas">zoom canvas</string>
    <string name="property_readers">Property Readers</string>
    <string name="planar_layout">Planar layout</string>
    <string name="planar_fixing_layout">Planar-fixing layout</string>
    <string name="forces_fixing_layout">Forces-fixing layout</string>
</resources>