<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/options_btn_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/undo"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
    </item>

    <item android:id="@+id/options_btn_redo"
        android:icon="@drawable/ic_redo"
        android:title="@string/redo"
        app:showAsAction="always" >
    </item>

    <item android:id="@+id/options_btn_save"
        android:icon="@drawable/ic_save"
        android:title="@string/save"
        app:showAsAction="always" >
    </item>

    <item android:id="@+id/options_btn_save_as"
        android:title="@string/save_as"
        app:showAsAction="never" >
    </item>

    <item android:id="@+id/options_btn_clear"
        android:title="@string/clear_graph"
        app:showAsAction="never" >
    </item>

    <item android:id="@+id/options_btn_normalize"
        android:title="@string/normalize_graph"
        app:showAsAction="never" >
    </item>



</menu>