<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_menu_color"
    android:paddingBottom="30dp"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_exit"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="64sp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/grey"
            android:text="@string/back"
            android:textSize="25sp"
            app:iconPadding="2dp"/>

        <Button
            android:id="@+id/btn_no"
            android:textSize="25sp"
            android:backgroundTint="@color/light_red"
            style="@style/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:text="@string/no"
            app:iconPadding="2dp" />

        <Button
            android:id="@+id/btn_yes"
            android:textSize="25sp"
            style="@style/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes"
            app:iconPadding="2dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
