<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_menu_color">

    <TextView
        android:id="@+id/extensionsTitle"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extensions"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/installedExtensions"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="30dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/extensionsTitle" />

    <TextView
        android:id="@+id/serverAddress"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_address"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/installedExtensions"
        app:layout_constraintVertical_bias="0.136" />

    <EditText
        android:id="@+id/serverIp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/change_server_ip"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@id/serverConnectButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/availableExtensions"
        app:layout_constraintTop_toBottomOf="@id/serverAddress" />

    <Button
        android:id="@+id/serverConnectButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/serverAddress"
        android:text="@string/connect"
        app:layout_constraintEnd_toEndOf="@id/availableExtensions"
        app:layout_constraintStart_toEndOf="@id/serverIp"
        app:layout_constraintTop_toTopOf="@id/serverIp"
        app:layout_constraintWidth_max="150dp"
        app:layout_constraintWidth_min="100dp" />
    <TextView
        android:id="@+id/availableTitle"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_extensions"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverIp"
        app:layout_constraintVertical_bias="0.136" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/availableExtensions"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="30dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/availableTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
