<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_menu_color"
    android:paddingBottom="30dp"
    android:padding="30dp">

    <TextView
        android:id="@+id/title"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_delete_this_graph"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.example.graph_editor.draw.graph_view.GraphView
        android:id="@+id/graphView"
        android:layout_width="wrap_content"

        android:layout_height="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="64sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphView"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btn_yes"
            style="@style/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="50dp"
            android:text="@string/yes" />

        <Button
            android:id="@+id/btn_no"
            style="@style/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/no" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
